--- a/frontend/src/pages/dashboard/dashboard.css
+++ b/frontend/src/pages/dashboard/dashboard.css
@@ -122,9 +122,31 @@
 }
 
 .card h3 {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   font-size: 16px;
   color: #9ca3af;
+}
+
+/* Wrapper to align video + text horizontally */
+.emotion-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 200px;
+    padding: 0px 20px;
+}
+
+/* Emotion text section */
+.emotion-info h2 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 24px;
+}
+
+.emotion-info p {
+    margin-top: 5px;
+    font-size: 14px;
+    opacity: 0.8;
 }
 
 .card h2 {
